test/e2e/fixtures/redirect-xfp/queries.json
[
  {"url": "/xfp/target/", "method": "GET", "headers": {"X-Forwarded-Proto": "http"}},
  {"url": "/xfp/target/", "method": "GET", "headers": {"X-Forwarded-Proto": "https"}},
  {"url": "/ambassador/v0/diag/?json=true&filter=errors", "method": "GET", "headers": {"X-Forwarded-Proto": "https"}}
]
